# cargo-publish-workspace

./: .gitignore  Cargo.toml  README.md  bors.toml  deny.toml
.github/workflows/: ci.yml
src/: arguments.rs  lib.rs  main.rs
src/pipeline/: commit.rs  update_dependents.rs  update_manifest.rs
