[package]
name = "cargo-publish-workspace"
description = "Topologically publish a complete workspace with a single command"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "0.18.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/cargo-publish-workspace"
edition = "2018"

[package.metadata]
msrv = "1.45.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
anyhow = "1.0.42"
chrono = "0.4.15"
guppy = "0.9.0"
toml_edit = "0.3.0"
